# TradeRepublicBoard

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml  tr_board.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-web.yml  deploy-worker.yml  security.yml
docs/: MODEL.md
fixtures/: README.md
fixtures/cases/: basic_dca.csv  empty.csv  interest_and_ignored.csv  rounding.csv  roundup.csv  single_buy.csv  stock_partial_sell.csv
fixtures/expected/: basic_dca.json  empty.json  interest_and_ignored.json  rounding.json  roundup.json  single_buy.json  stock_partial_sell.json
sprints/: README.md
sprints/done/: 2026-07-04-initial-repo-and-i18n.md
sprints/todo/: 01-directory-watcher.md  02-secure-ingestion.md  03-dockerization.md  04-web-dashboard.md  05-tests-tdd-ci.md
tests/: test_ingestion.py  test_model.py
